--- a/FormTags/Login.html
+++ b/FormTags/Login.html
@@ -8,9 +8,15 @@
 
     <h1>Login Page</h1>
     <form>
-        <label>Email Id:</label>
-        <input type="text" /> <br><br>  
+        <div>
 
+            <div>
+                <label>Email Id:</label>
+                <input type="text" />
+
+            </div>
+
+        </div>
         <label>Password</label>
         <input type="text" /> <br><br>
 
